# cortes-app

./: .env.example  .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
nichos/: _TEMPLATE.md
nichos/league-of-legends/: AGENT.md
nichos/tibia/: AGENT.md  bugs.md
skills/: borda-neon-logo.md  curadoria-cortes-twitch.md  ducking-musica-voz.md  legenda-queimada.md
specs/: esteira-agendamento.md  experimento-titulo.md  layout-render.md  pipeline-shorts.md
src/cortes_app/: __init__.py  __main__.py
src/cortes_app/domain/: __init__.py  eligibility.py  silence.py
src/cortes_app/sources/: __init__.py  base.py  twitch_clips.py
src/cortes_app/web/: __init__.py  __main__.py  app.py
tests/: test_cli.py  test_package.py
tests/domain/: test_eligibility.py  test_silence.py
tests/sources/: test_twitch_clips.py
tests/web/: test_app.py
